<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/translator_fragment"
        android:icon="@drawable/ic_menu_cards"
        android:orderInCategory="10"
        android:title="@string/translator"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigationSituations"
        android:icon="@drawable/ic_menu_cards"
        android:orderInCategory="30"
        android:title="@string/menu_situations"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_graph_repetition"
        android:icon="@drawable/card_64"
        android:orderInCategory="50"
        android:title="@string/Cards"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigationSettings"
        android:icon="@drawable/ic_menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
</menu>