<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="@dimen/settings_spacing">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/settings_header"
        android:textColor="@color/header_color"
        android:textSize="@dimen/header_size" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#E4E4E4"
        app:cardCornerRadius="@dimen/corner_radius_big">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/settings_spacing">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_spacing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_popup_notifications"
                android:textColor="@color/subheader_color" />

            <ru.marslab.ruen.settingsscreen.view.ToggleableSetting
                android:id="@+id/dailyWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/tv_daily_word" />

            <ru.marslab.ruen.settingsscreen.view.ToggleableSetting
                android:id="@+id/cardRepetition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/tv_card_repetition" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_spacing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_inner_settings"
                android:textColor="@color/subheader_color" />

            <ru.marslab.ruen.settingsscreen.view.ToggleableSetting
                android:id="@+id/popUpCardNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/tv_card_repetition_popup" />

            <ru.marslab.ruen.settingsscreen.view.ToggleableSetting
                android:id="@+id/activateImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/tv_activate_all_images" />

            <ru.marslab.ruen.settingsscreen.view.ToggleableSetting
                android:id="@+id/activateImagesInCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/tv_activate_cards_images" />

            <ru.marslab.ruen.settingsscreen.view.ToggleableSetting
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/tv_dark_theme" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_font_size" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/fontSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progressDrawable="@drawable/seekbar_track"
                android:thumb="@drawable/slider_thumb"
                android:tickMark="@drawable/seekbar_tick"
                tools:progress="1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>