<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/android_lar_2"
    android:background="@color/background"
    android:clipToOutline="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    tools:targetApi="s">

    <View
        android:id="@+id/logo"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/logo" />

    <View
        android:id="@+id/search"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/rus"
        android:layout_alignParentTop="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/search"
        android:elevation="4dp" />

<!--    <EditText-->
<!--        android:layout_width="185dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_alignStart="@+id/rus"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_marginStart="62dp"-->
<!--        android:layout_marginTop="168dp"-->
<!--        android:gravity="center_horizontal|center_vertical"-->
<!--        android:hint="@string/editText"-->
<!--        android:imeOptions="actionDone"-->
<!--        android:inputType="enterTextToSearch"-->
<!--        android:selectAllOnFocus="true"-->
<!--        android:textAppearance="@style/Widget.AppCompat.EditText" />-->

    <TextView
        android:id="@+id/rus"
        android:layout_width="62dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="168dp"
        android:gravity="center_horizontal|center_horizontal|center_vertical"
        android:text="@string/rus"
        android:textAppearance="@style/rus" />

    <TextView
        android:id="@+id/word_to_translate"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/rus"
        android:layout_alignParentTop="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="168dp"
        android:background="#0fff0000"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/word_to_translate"
        android:textAppearance="@style/word_to_translate" />

    <RelativeLayout
        android:id="@+id/block_translate"
        android:layout_width="320dp"
        android:layout_height="281dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="284dp"
        android:background="@drawable/block_translate"
        app:layout_constraintTop_toTopOf="parent">

        <!--        <EditText-->
        <!--            android:layout_width="320dp"-->
        <!--            android:layout_height="281dp"-->
        <!--            android:layout_marginStart="0dp"-->
        <!--            android:layout_marginTop="0dp"-->
        <!--            android:gravity="center_horizontal|center_vertical"-->
        <!--            android:hint="@string/editText"-->
        <!--            android:imeOptions="actionDone"-->
        <!--            android:selectAllOnFocus="true"-->
        <!--            android:textAppearance="@style/Widget.AppCompat.EditText" />-->

        <TextView
            android:id="@+id/Realty"
            android:layout_width="62dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal|center_horizontal|center_vertical"
            android:text="@string/Realty"
            android:textAppearance="@style/realty" />

        <TextView
            android:id="@+id/first_description"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal|center_horizontal|center_vertical"
            android:text="@string/first_description"
            android:textAppearance="@style/first_description" />

        <TextView
            android:id="@+id/_1"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="95dp"
            android:gravity="center_horizontal|center_horizontal|center_vertical"
            android:text="@string/_1"
            android:textAppearance="@style/_1" />

        <TextView
            android:id="@+id/realty"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="95dp"
            android:gravity="center_horizontal|center_horizontal|center_vertical"
            android:text="@string/realty"
            android:textAppearance="@style/realty" />

        <TextView
            android:id="@+id/immovables"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="95dp"
            android:gravity="center_horizontal|center_horizontal|center_vertical"
            android:text="@string/immovables"
            android:textAppearance="@style/immovables" />

        <TextView
            android:id="@+id/estate"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="140dp"
            android:gravity="center_horizontal|center_horizontal|center_vertical"
            android:text="@string/estate"
            android:textAppearance="@style/estate" />

        <TextView
            android:id="@+id/property"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="140dp"
            android:gravity="center_horizontal|center_horizontal|center_vertical"
            android:text="@string/property"
            android:textAppearance="@style/property" />

        <TextView
            android:id="@+id/second_description"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="185dp"
            android:gravity="center_horizontal|center_horizontal|center_vertical"
            android:text="@string/second_description"
            android:textAppearance="@style/second_description" />

        <TextView
            android:id="@+id/_2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="230dp"
            android:gravity="center_horizontal|center_horizontal|center_vertical"
            android:text="@string/_2"
            android:textAppearance="@style/_2" />

        <TextView
            android:id="@+id/V"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="267dp"
            android:layout_marginTop="230dp"
            android:gravity="center_horizontal|center_horizontal|center_vertical"
            android:text="@string/V"
            android:textAppearance="@style/V" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view"
        android:layout_width="62dp"
        android:layout_height="42dp"
        android:layout_marginStart="298dp"
        android:layout_marginTop="172dp"
        app:srcCompat="@drawable/arrow" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/transp"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="290dp"
        app:srcCompat="@drawable/transp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu" />
</RelativeLayout>