<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_picture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/picture_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/noimage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_word_margin_top"
        android:textSize="@dimen/card_word_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_picture"
        tools:text="@string/word" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_transcription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_transcription_margin_top"
        android:textSize="@dimen/card_transcription_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_word"
        tools:text="@string/transcription" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_sound"
        android:layout_width="@dimen/card_icon_sound_width"
        android:layout_height="@dimen/card_icon_sound_height"
        android:layout_marginStart="@dimen/card_icon_sound_margin_start"
        app:layout_constraintBottom_toBottomOf="@id/tv_transcription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_transcription"
        app:layout_constraintTop_toTopOf="@id/tv_transcription"
        app:srcCompat="@drawable/sound" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_translations"
        android:layout_width="@dimen/card_translations_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_translations_margin_top"
        app:chipSpacingHorizontal="@dimen/card_translations_chip_spacing"
        android:layout_marginHorizontal="20dp"
        app:flow_horizontalAlign="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_transcription">

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_customTranslation"
        android:layout_width="@dimen/card_custom_translation_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/card_custom_translation_margin_horizontal"
        android:layout_marginTop="@dimen/card_custom_translation_margin_top"
        android:hint="@string/custom_translate"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cg_translations" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_save_margin"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>